0.0.11  (.... 2005)
- Added walking with mouse by clicking where you want to go
- Chat now appears in a window
- More complete support for new map format (collision, compression)
- Fixed problem where players would often turn up with black hair
- Fixed not showing other players dead when they die
- Fixed multiple crashes in being path handling
- Fixed initial starting position for new player characters

0.0.10  (5 March 2005)
- Added using and dropping of items
- Added experimental support for OpenGL rendering
- Added support for new map format in client
- Added ability to load resources from zip files
- Added start of a minimap
- Added new GUI skin, wallpaper and mouse cursor
- Fixed and reintroduced cancel button for NPC choice dialog
- Fixed character creation and deletion error handling
- Fixed crash in fullscreen with hardware acceleration enabled (win32)
- Fixed talking to NPCs and walking while NPC window is still open
- Reimplemented A* pathfinding, more flexible and stable now
- Removed background music that wasn't ours

0.0.9  (30 Jan 2005)
- Replaced Allegro library with SDL, SDL_image and SDL_mixer
- A huge amount of small GUI improvements
- Lots of internal changes including a resource manager

0.0.8a  (27 Dec 2004)
- Added controlling player with arrow keys
- Rewrote gui with Guichan
- Added scripts for easy autotools

0.0.8  (30 Oct 2004)
- Added sound support for macosx
- Added primitive inventory
- Added action failed messages for all skills and known reasons
  (0x0110 handled)
- Added sit capability with the right level
- Added "dead" message and restart packet
- Added skill dialog
- Added skill update (0x0141 handled)
- Added colored text for damage
- Added monster death animation
- Added icon to win32 executable
- Added 'enter' key support in login screen
- Added RLE sprites for tiles
- Added collision detection with beings
- Fix for mapserver segfault-bug in chatsystem (broken pipe for all users on 
  screen)